# huje.sensemusic.OC-python.src

./: CLAUDE.md  README.md  pyproject.toml
clawhub/: SKILL.md  metadata.json
examples/: quickstart.py  suno_workflow.py
src/sense_music/: __init__.py  _palette.py  analyze.py  features.py  lyrics.py  output.py  sections.py  spectrogram.py  types.py  waveform.py
tests/: conftest.py  test_analyze.py  test_features.py  test_lyrics.py  test_output.py  test_sections.py  test_security.py  test_spectrogram.py
